# mcdm_online_exploration

./: CMakeLists.txt  main.cpp  main_marco.cpp  main_new.cpp  map.cpp  mcdmfunction.cpp  newray.cpp
Criteria/: mcdmweightreader.cpp  sensingtimecriterion.cpp
include/: map.h  mcdmfunction.h  newray.h
